--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -14,7 +14,7 @@ LeadSummaryScreen As screen:
         ZIndex: =1
 
         ctnHeaderLSS As groupContainer.horizontalAutoLayoutContainer:
-            AlignInContainer: =AlignInContainer.SetByContainer
+            AlignInContainer: =AlignInContainer.Center
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |-
@@ -31,23 +31,33 @@ LeadSummaryScreen As screen:
             X: =0.00
             ZIndex: =1
 
-            IconBackLSS As icon.BackArrow:
-                Color: =RGBA(255, 0, 0, 1)
-                Height: =55
-                Icon: =Icon.BackArrow
-                OnSelect: |-
-                    =Navigate(DashboardScreen);
-                    UpdateContext({locInfoExpanded:false})
-                PaddingBottom: =5
-                PaddingLeft: =20
-                PaddingTop: =5
-                Width: =55
+            iconBackES_3 As icon.BackArrow:
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height
+                Icon: =Icon.Hamburger
+                OnSelect: =
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
+                Width: =Parent.Height
                 X: =18
                 Y: =11
-                ZIndex: =1
+                ZIndex: =8
 
-            lblHeaderLSS As label:
-                Color: =RGBA(116, 116, 116, 1)
+            imgSchindlerLogoES_3 As image:
+                DisplayMode: =DisplayMode.View
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =Parent.Height
+                Image: ='1x'
+                LayoutMinHeight: =320
+                LayoutMinWidth: =320
+                PaddingBottom: =5
+                PaddingTop: =0.00
+                Width: =If(Parent.Width>Parent.Height,Parent.Width/8,Parent.Width/12)
+                X: =0.00
+                ZIndex: =9
+
+            lblHeaderES_3 As label:
+                AlignInContainer: =AlignInContainer.Center
                 DisplayMode: =DisplayMode.View
                 Font: =Font.Arial
                 FontWeight: =FontWeight.Bold
@@ -55,25 +65,39 @@ LeadSummaryScreen As screen:
                 LayoutMinHeight: =70
                 PaddingLeft: =20
                 PaddingRight: =5.34
+                PaddingTop: =5.34
                 Size: |
                     =//21.36
-                    If(Parent.Width<500,12,Parent.Width>500,20,12)
-                Text: ="Technicians Lead Generation"
-                Width: =Parent.Width-imgSchindlerLogoLSS.Width-IconBackLSS.Width
+                    If(Parent.Width<500,14,Parent.Width>500,18)
+                Text: =" Technician Lead Generation"
+                Width: =Parent.Width-imgSchindlerLogoES_3.Width-iconBackES_3.Width-btnuserES_3.Width-20
                 X: =96.12
-                ZIndex: =2
+                ZIndex: =10
 
-            imgSchindlerLogoLSS As image:
-                DisplayMode: =DisplayMode.View
-                Fill: =RGBA(255, 255, 255, 1)
-                Height: =Parent.Height
-                Image: ='3x'
-                LayoutMinHeight: =320
-                LayoutMinWidth: =320
-                PaddingTop: =0.00
-                Width: =Parent.Width/7.5
-                X: =0.00
-                ZIndex: =3
+            btnuserES_3 As button:
+                AlignInContainer: =AlignInContainer.Center
+                BorderColor: =Color.Red
+                Color: =RGBA(0, 0, 0, 1)
+                DisabledBorderColor: =RGBA(255, 0, 0, 1)
+                DisabledColor: =RGBA(0, 0, 0, 1)
+                DisabledFill: =RGBA(0, 0, 0, 0)
+                DisplayMode: =DisplayMode.Disabled
+                Fill: =RGBA(0, 0, 0, 0)
+                Font: =Font.Arial
+                Height: =Parent.Height/1.5
+                RadiusBottomLeft: =50
+                RadiusBottomRight: =50
+                RadiusTopLeft: =50
+                RadiusTopRight: =50
+                Size: =If(Parent.Width<500,11,Parent.Width>500,12,12)
+                Text: |-
+                    =Left(User().FullName, 1) &
+                    Mid(
+                        User().FullName,
+                        Find(" ", User().FullName) + 1,
+                        1)
+                Width: =Parent.Height/1.5
+                ZIndex: =11
 
         ctnUserNameLSS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
@@ -91,32 +115,19 @@ LeadSummaryScreen As screen:
             ZIndex: =2
 
             btnUserNameLSS As button:
-                Align: =Align.Right
+                Color: =RGBA(0, 0, 0, 1)
                 DisplayMode: =DisplayMode.View
-                Fill: =RGBA(255, 0, 0, 1)
+                Fill: =RGBA(255, 255, 255, 1)
                 Font: =Font.Arial
                 Height: =Parent.Height
                 PaddingBottom: =0
-                PaddingLeft: =100
+                PaddingLeft: =20
                 PaddingRight: =20
                 PaddingTop: =0
-                Size: =If(Parent.Width<500,16,Parent.Width>500,22,18)
-                Text: ="Create Lead"
+                Size: =If(Parent.Width<500,16,Parent.Width>500,20,18)
+                Text: ="Submitted Leads"
                 Width: =Parent.Width
                 ZIndex: =1
-
-            lblUserNameLSS As label:
-                Color: =RGBA(255, 255, 255, 1)
-                Font: =Font.Arial
-                Height: =Parent.Height
-                PaddingBottom: =0
-                PaddingLeft: =10
-                PaddingRight: =10
-                PaddingTop: =0
-                Size: =If(Parent.Width<500,14,Parent.Width>500,20,18)
-                Text: =User().FullName
-                Width: =Parent.Width/2
-                ZIndex: =2
 
         ctnMiddleLSS As groupContainer.verticalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
@@ -1286,12 +1297,12 @@ LeadSummaryScreen As screen:
 
                     IconImageLSS As icon.Cancel:
                         Color: =RGBA(255, 0, 0, 1)
-                        Height: =30
+                        Height: =Parent.Height/12
                         Icon: =Icon.Cancel
                         OnSelect: =Remove(LeadImagesCollection,ThisItem);
-                        Width: =30
+                        Width: =Parent.Height/12
                         X: =ImageLSS.Width-Self.Width
-                        Y: =ImageLSS.Y+10
+                        Y: =ImageLSS.Y
                         ZIndex: =2
 
             ctnButtonSummaryScreen As groupContainer.verticalAutoLayoutContainer:
@@ -1410,6 +1421,7 @@ LeadSummaryScreen As screen:
                 ZIndex: =4
 
                 Image3_6 As image:
+                    DisplayMode: =DisplayMode.View
                     Fill: =RGBA(255, 255, 255, 1)
                     Height: =Parent.Height
                     Image: ='3x'
