--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -159,11 +159,11 @@ SubmittedLeadScreen As screen:
                 ZIndex: =1
 
                 Title2 As label:
+                    Align: =Align.Center
                     AutoHeight: =true
+                    Color: =RGBA(255, 0, 0, 1)
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                    Height: |-
-                        =//Self.Size * 1.8
-                        30
+                    Height: =30
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -171,9 +171,9 @@ SubmittedLeadScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
                     Text: =ThisItem.Value
-                    Width: =Parent.Width/10
-                    X: =lblTitleYearSLS.X+lblTitleYearSLS.Width
-                    Y: =10
+                    Width: =Parent.Width/8
+                    X: =lblTitleYearSLS.X
+                    Y: =lblTitleYearSLS.Y+lblTitleYearSLS.Height+10
                     ZIndex: =1
 
                 "glryLeadsSLS As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
@@ -540,11 +540,10 @@ SubmittedLeadScreen As screen:
                         ZIndex: =21
 
                 lblTitleYearSLS As label:
+                    Align: =Align.Center
                     AutoHeight: =true
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                    Height: |-
-                        =//Self.Size * 1.8
-                        30
+                    Height: =30
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -554,17 +553,16 @@ SubmittedLeadScreen As screen:
                     Text: |-
                         =//ThisItem.Value\
                         "Year"
-                    Width: =Parent.Width/10
+                    Width: =Parent.Width/8
                     X: =10
                     Y: =10
-                    ZIndex: =5
+                    ZIndex: =3
 
                 lblCountTotalLeadsSLS As label:
+                    Align: =Align.Center
                     AutoHeight: =true
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                    Height: |-
-                        =//Self.Size * 1.8
-                        30
+                    Height: =30
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -577,12 +575,13 @@ SubmittedLeadScreen As screen:
                         Year('Created On')=Year(Title2.Text)))
                         
                     VerticalAlign: =VerticalAlign.Top
-                    Width: =Parent.Width/10
-                    X: =lblTotalLeadsSLS.Width+lblTotalLeadsSLS.X
-                    Y: =10
-                    ZIndex: =6
+                    Width: =lblTotalLeadsSLS.Width
+                    X: =lblTotalLeadsSLS.X
+                    Y: =lblTotalLeadsSLS.Y+lblTotalLeadsSLS.Height+10
+                    ZIndex: =4
 
                 lblTotalLeadsSLS As label:
+                    Align: =Align.Center
                     AutoHeight: =true
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                     Height: |-
@@ -598,12 +597,13 @@ SubmittedLeadScreen As screen:
                         =//ThisItem.Value\
                         "Total Leads"
                     VerticalAlign: =VerticalAlign.Top
-                    Width: =Parent.Width/6
-                    X: =Title2.Width+Title2.X
+                    Width: =Parent.Width/3.3
+                    X: =lblTitleYearSLS.Width+lblTitleYearSLS.X+20
                     Y: =10
-                    ZIndex: =7
+                    ZIndex: =5
 
                 lblCountTotalIncentivesSLS As label:
+                    Align: =Align.Center
                     AutoHeight: =true
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                     Height: |-
@@ -623,17 +623,16 @@ SubmittedLeadScreen As screen:
                             TotalIncentives
                         )
                     VerticalAlign: =VerticalAlign.Top
-                    Width: =Parent.Width/6
-                    X: =lblTotalIncentivesSLS.Width+lblTotalIncentivesSLS.X
-                    Y: =10
-                    ZIndex: =8
+                    Width: =Parent.Width/3
+                    X: =lblTotalLeadsSLS.Width+lblTotalLeadsSLS.X+20
+                    Y: =lblTotalIncentivesSLS.Y+lblTotalIncentivesSLS.Height+20
+                    ZIndex: =6
 
                 lblTotalIncentivesSLS As label:
+                    Align: =Align.Center
                     AutoHeight: =true
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                    Height: |-
-                        =//Self.Size * 1.8
-                        30
+                    Height: =30
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -644,21 +643,21 @@ SubmittedLeadScreen As screen:
                         =//ThisItem.Value\
                         "Total Incentives"
                     VerticalAlign: =VerticalAlign.Top
-                    Width: =Parent.Width/5
-                    X: =lblCountTotalLeadsSLS.Width+lblCountTotalLeadsSLS.X
+                    Width: =Parent.Width/3
+                    X: =lblTotalLeadsSLS.X+lblTotalLeadsSLS.Width
                     Y: =10
-                    ZIndex: =9
+                    ZIndex: =7
 
                 rectangleYearSLS As rectangle:
-                    BorderColor: =RGBA(255, 0, 0, 1)
+                    BorderColor: =RGBA(219, 219, 219, 1)
                     BorderThickness: =1
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =50
+                    Height: =70
                     OnSelect: =Select(Parent)
                     Width: |-
                         =//Parent.Width/1.02
                         If(Parent.Width<378,Parent.Width/1.06,Parent.Width<500,Parent.Width/1.06,Parent.Width/1.03)
-                    ZIndex: =10
+                    ZIndex: =8
 
                 imgExpandSLS As image:
                     Height: =rectangleYearSLS.Height/1.08
@@ -669,7 +668,7 @@ SubmittedLeadScreen As screen:
                         =!(ThisItem.IsSelected && locInfoExpanded)
                     Width: =Parent.Width/14
                     X: =rectangleYearSLS.Width -(1.08*Self.Width)
-                    ZIndex: =11
+                    ZIndex: =9
 
                 imgCollapseSLS As image:
                     Height: =rectangleYearSLS.Height/1.08
@@ -680,7 +679,19 @@ SubmittedLeadScreen As screen:
                         =ThisItem.IsSelected && locInfoExpanded
                     Width: =Parent.Width/14
                     X: =rectangleYearSLS.Width -(1.08*Self.Width)
-                    ZIndex: =12
+                    ZIndex: =10
+
+                Icon1 As icon.ChevronDown:
+                    Color: =RGBA(202, 202, 202, 1)
+                    Fill: =RGBA(255, 255, 255, 1)
+                    FocusedBorderThickness: =0
+                    Height: =rectangleYearSLS.Height/8
+                    Icon: =Icon.ChevronDown
+                    OnSelect: =Select(Parent)
+                    Width: =Parent.Width/58
+                    X: =rectangleYearSLS.Width/2
+                    Y: =rectangleYearSLS.Height/1.035
+                    ZIndex: =11
 
             ctnSearchBarSLS As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
@@ -695,9 +706,11 @@ SubmittedLeadScreen As screen:
                 IntxtSearchBoxSLS As text:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     Clear: =true
+                    Color: =RGBA(255, 0, 0, 1)
                     Default: =""
                     DisabledBorderColor: =RGBA(255, 0, 0, 1)
-                    HintText: ="Search Lead"
+                    Font: =Font.Arial
+                    HintText: ="Search Leads"
                     HoverBorderColor: =RGBA(255, 0, 0, 1)
                     HoverFill: =RGBA(0, 0, 0, 0)
                     LayoutMinHeight: =70
