--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -454,6 +454,8 @@ ImageUploadScreen As screen:
 
                 AddMediaWithImageIS As group:
                     Height: =5
+                    LayoutMinHeight: =5
+                    LayoutMinWidth: =5
                     Width: =5
                     X: =40
                     Y: =20
