--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -16,7 +16,6 @@ SubmittedLeadScreen As screen:
         ZIndex: =1
 
         ctnHeaderSLS As groupContainer.horizontalAutoLayoutContainer:
-            AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |-
@@ -33,23 +32,48 @@ SubmittedLeadScreen As screen:
             X: =0.00
             ZIndex: =1
 
-            iconBackCL_1 As icon.BackArrow:
-                Color: =RGBA(255, 0, 0, 1)
-                Height: =55
-                Icon: =Icon.BackArrow
-                OnSelect: |-
-                    =Navigate(DashboardScreen);
-                    UpdateContext({locInfoExpanded:false})
-                PaddingBottom: =5
-                PaddingLeft: =20
-                PaddingTop: =5
-                Width: =55
+            IconMenuDS_1 As icon.Hamburger:
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height
+                Icon: =Icon.Hamburger
+                OnSelect: =//Set(varshowMenu,!varshowMenu)
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
+                Width: =Parent.Height/2
                 X: =18
                 Y: =11
                 ZIndex: =1
 
-            lblHeaderCL_1 As label:
-                Color: =RGBA(116, 116, 116, 1)
+            imgSchindlerLogoDS_1 As image:
+                AlignInContainer: =AlignInContainer.Center
+                DisplayMode: =DisplayMode.View
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =Parent.Height
+                Image: ='1x'
+                LayoutMinHeight: =320
+                LayoutMinWidth: =320
+                PaddingBottom: =5
+                PaddingTop: =0.00
+                Width: =If(Parent.Width>Parent.Height,Parent.Width/10,Parent.Width/12)
+                X: =0.00
+                ZIndex: =2
+
+            iconBackCL_1 As icon.BackArrow:
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height/2
+                Icon: =Icon.ChevronLeft
+                OnSelect: |-
+                    =Navigate(DashboardScreen);
+                    UpdateContext({locInfoExpanded:false})
+                PaddingBottom: =5
+                PaddingTop: =5
+                Width: =Parent.Width/20
+                X: =18
+                Y: =11
+                ZIndex: =3
+
+            lblHeaderDS_2 As label:
+                AlignInContainer: =AlignInContainer.Center
                 DisplayMode: =DisplayMode.View
                 Font: =Font.Arial
                 FontWeight: =FontWeight.Bold
@@ -57,25 +81,39 @@ SubmittedLeadScreen As screen:
                 LayoutMinHeight: =70
                 PaddingLeft: =20
                 PaddingRight: =5.34
+                PaddingTop: =5.34
                 Size: |
                     =//21.36
-                    If(Parent.Width<500,14,Parent.Width>500,22,12)
-                Text: ="Technicians Lead Generation"
-                Width: =Parent.Width-imgSchindlerLogoCL_1.Width-iconBackCL_1.Width
+                    If(Parent.Width<500,14,Parent.Width>500,20)
+                Text: ="Technician Lead Generation"
+                Width: =Parent.Width-imgSchindlerLogoDS_1.Width-IconMenuDS_1.Width-Button2_2.Width-60
                 X: =96.12
-                ZIndex: =2
+                ZIndex: =4
 
-            imgSchindlerLogoCL_1 As image:
-                DisplayMode: =DisplayMode.View
-                Fill: =RGBA(255, 255, 255, 1)
-                Height: =Parent.Height
-                Image: ='3x'
-                LayoutMinHeight: =320
-                LayoutMinWidth: =320
-                PaddingTop: =0.00
-                Width: =Parent.Width/7.5
-                X: =0.00
-                ZIndex: =3
+            Button2_2 As button:
+                AlignInContainer: =AlignInContainer.Center
+                BorderColor: =Color.Red
+                Color: =RGBA(0, 0, 0, 1)
+                DisabledBorderColor: =RGBA(255, 0, 0, 1)
+                DisabledColor: =RGBA(0, 0, 0, 1)
+                DisabledFill: =RGBA(0, 0, 0, 0)
+                DisplayMode: =DisplayMode.Disabled
+                Fill: =RGBA(0, 0, 0, 0)
+                Font: =Font.Arial
+                Height: =Parent.Height/1.5
+                RadiusBottomLeft: =50
+                RadiusBottomRight: =50
+                RadiusTopLeft: =50
+                RadiusTopRight: =50
+                Size: =If(Parent.Width<500,11,Parent.Width>500,12,12)
+                Text: |-
+                    =Left(User().FullName, 1) &
+                    Mid(
+                        User().FullName,
+                        Find(" ", User().FullName) + 1,
+                        1)
+                Width: =Parent.Height/1.5
+                ZIndex: =5
 
         ctnUserNameSLS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
@@ -93,31 +131,19 @@ SubmittedLeadScreen As screen:
             ZIndex: =2
 
             btnheaderCL_1 As button:
-                Align: =Align.Right
+                Color: =RGBA(0, 0, 0, 1)
                 DisplayMode: =DisplayMode.View
-                Fill: =RGBA(255, 0, 0, 1)
+                Fill: =RGBA(255, 255, 255, 1)
                 Font: =Font.Arial
                 Height: =Parent.Height
                 PaddingBottom: =0
-                PaddingLeft: =100
+                PaddingLeft: =20
                 PaddingRight: =20
                 PaddingTop: =0
                 Size: =If(Parent.Width<500,14,Parent.Width>500,20,18)
                 Text: ="Submitted Leads"
                 Width: =Parent.Width
                 ZIndex: =1
-
-            lblUserNameCL_1 As label:
-                Color: =RGBA(255, 255, 255, 1)
-                Font: =Font.Arial
-                Height: =Parent.Height
-                PaddingBottom: =0
-                PaddingRight: =10
-                PaddingTop: =0
-                Size: =If(Parent.Width<500,14,Parent.Width>500,20,18)
-                Text: =User().FullName
-                Width: =Parent.Width/2
-                ZIndex: =2
 
         ctnMiddleSLS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(255, 255, 255, 1)
