--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -1,8 +1,10 @@
 ViewDetailsScreen As screen:
 
     Container5_1 As groupContainer.verticalAutoLayoutContainer:
+        Fill: =RGBA(237, 237, 237, 1)
         Height: =Parent.Height
         LayoutDirection: =LayoutDirection.Vertical
+        LayoutGap: =10
         LayoutMode: =LayoutMode.Auto
         LayoutOverflowY: =LayoutOverflow.Scroll
         Width: =Parent.Width
@@ -26,23 +28,48 @@ ViewDetailsScreen As screen:
             X: =0.00
             ZIndex: =1
 
-            iconBackCL_2 As icon.BackArrow:
-                Color: =RGBA(255, 0, 0, 1)
-                Height: =55
-                Icon: =Icon.BackArrow
+            IconMenuDS_2 As icon.Hamburger:
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height
+                Icon: =Icon.Hamburger
+                OnSelect: =//Set(varshowMenu,!varshowMenu)
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
+                Width: =Parent.Height/2
+                X: =18
+                Y: =11
+                ZIndex: =4
+
+            imgSchindlerLogoDS_2 As image:
+                AlignInContainer: =AlignInContainer.Center
+                DisplayMode: =DisplayMode.View
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =Parent.Height
+                Image: ='1x'
+                LayoutMinHeight: =320
+                LayoutMinWidth: =320
+                PaddingBottom: =5
+                PaddingTop: =0.00
+                Width: =If(Parent.Width>Parent.Height,Parent.Width/10,Parent.Width/12)
+                X: =0.00
+                ZIndex: =5
+
+            iconBackCL_3 As icon.BackArrow:
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height/2
+                Icon: =Icon.ChevronLeft
                 OnSelect: |-
                     =Navigate(SubmittedLeadScreen);
                     UpdateContext({locInfoExpanded:false})
                 PaddingBottom: =5
-                PaddingLeft: =20
                 PaddingTop: =5
-                Width: =55
+                Width: =Parent.Width/20
                 X: =18
                 Y: =11
-                ZIndex: =1
+                ZIndex: =6
 
-            lblHeaderCL_2 As label:
-                Color: =RGBA(116, 116, 116, 1)
+            lblHeaderDS_3 As label:
+                AlignInContainer: =AlignInContainer.Center
                 DisplayMode: =DisplayMode.View
                 Font: =Font.Arial
                 FontWeight: =FontWeight.Bold
@@ -50,25 +77,39 @@ ViewDetailsScreen As screen:
                 LayoutMinHeight: =70
                 PaddingLeft: =20
                 PaddingRight: =5.34
+                PaddingTop: =5.34
                 Size: |
                     =//21.36
-                    If(Parent.Width<500,14,Parent.Width>500,22,12)
-                Text: ="Technicians Lead Generation"
-                Width: =Parent.Width-imgSchindlerLogoCL_2.Width-iconBackCL_2.Width
+                    If(Parent.Width<500,14,Parent.Width>500,20)
+                Text: ="Technician Lead Generation"
+                Width: =Parent.Width-imgSchindlerLogoDS_2.Width-IconMenuDS_2.Width-Button2_3.Width-60
                 X: =96.12
-                ZIndex: =2
+                ZIndex: =7
 
-            imgSchindlerLogoCL_2 As image:
-                DisplayMode: =DisplayMode.View
-                Fill: =RGBA(255, 255, 255, 1)
-                Height: =Parent.Height
-                Image: ='3x'
-                LayoutMinHeight: =320
-                LayoutMinWidth: =320
-                PaddingTop: =0.00
-                Width: =Parent.Width/7.5
-                X: =0.00
-                ZIndex: =3
+            Button2_3 As button:
+                AlignInContainer: =AlignInContainer.Center
+                BorderColor: =Color.Red
+                Color: =RGBA(0, 0, 0, 1)
+                DisabledBorderColor: =RGBA(255, 0, 0, 1)
+                DisabledColor: =RGBA(0, 0, 0, 1)
+                DisabledFill: =RGBA(0, 0, 0, 0)
+                DisplayMode: =DisplayMode.Disabled
+                Fill: =RGBA(0, 0, 0, 0)
+                Font: =Font.Arial
+                Height: =Parent.Height/1.5
+                RadiusBottomLeft: =50
+                RadiusBottomRight: =50
+                RadiusTopLeft: =50
+                RadiusTopRight: =50
+                Size: =If(Parent.Width<500,11,Parent.Width>500,12,12)
+                Text: |-
+                    =Left(User().FullName, 1) &
+                    Mid(
+                        User().FullName,
+                        Find(" ", User().FullName) + 1,
+                        1)
+                Width: =Parent.Height/1.5
+                ZIndex: =8
 
         ctnUserHeaderVDS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.Center
@@ -86,13 +127,14 @@ ViewDetailsScreen As screen:
             ZIndex: =2
 
             btnheaderCL_2 As button:
-                Align: =Align.Right
+                BorderColor: =RGBA(219, 219, 219, 1)
+                Color: =RGBA(0, 0, 0, 1)
                 DisplayMode: =DisplayMode.View
-                Fill: =RGBA(255, 0, 0, 1)
+                Fill: =RGBA(255, 255, 255, 1)
                 Font: =Font.Arial
                 Height: =Parent.Height
                 PaddingBottom: =0
-                PaddingLeft: =100
+                PaddingLeft: =20
                 PaddingRight: =20
                 PaddingTop: =0
                 Size: =If(Parent.Width<500,14,Parent.Width>500,20,18)
@@ -100,19 +142,8 @@ ViewDetailsScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-            lblUserNameCL_2 As label:
-                Color: =RGBA(255, 255, 255, 1)
-                Font: =Font.Arial
-                Height: =Parent.Height
-                PaddingBottom: =0
-                PaddingRight: =10
-                PaddingTop: =0
-                Size: =If(Parent.Width<500,14,Parent.Width>500,20,18)
-                Text: =User().FullName
-                Width: =Parent.Width/2
-                ZIndex: =2
-
         Container2 As groupContainer.verticalAutoLayoutContainer:
+            AlignInContainer: =AlignInContainer.Center
             FillPortions: =0
             Height: =SummaryForm_3.Height+glryImageLSS_2.Height
             LayoutDirection: =LayoutDirection.Vertical
@@ -120,13 +151,15 @@ ViewDetailsScreen As screen:
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             LayoutOverflowY: =LayoutOverflow.Scroll
+            Width: =Parent.Width-40
             ZIndex: =3
 
             SummaryForm_3 As form:
                 DataSource: =LeadInformations
                 DefaultMode: =FormMode.View
+                Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0
-                Height: ='Contract Number_DataCard1_3'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+10
+                Height: ='Contract Number_DataCard1_3'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+30
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =400
@@ -1316,8 +1349,11 @@ ViewDetailsScreen As screen:
                 AlignInContainer: =AlignInContainer.Center
                 BorderColor: =RGBA(39, 113, 194, 1)
                 DelayItemLoading: =true
+                Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0
-                Height: =If(glryImageLSS_2.AllItemsCount=0,0,glryImageLSS_2.AllItemsCount=1||glryImageLSS_2.AllItemsCount=2,250,glryImageLSS_2.AllItemsCount=4,550)
+                Height: |-
+                    =//If(glryImageLSS_2.AllItemsCount=0,0,glryImageLSS_2.AllItemsCount=1||glryImageLSS_2.AllItemsCount=2,250,glryImageLSS_2.AllItemsCount=4,550)
+                    200
                 Items: =Filter(LeadImages,LeadInformationLID.ID=VarLtdID)
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =287
@@ -1325,8 +1361,8 @@ ViewDetailsScreen As screen:
                 LoadingSpinner: =LoadingSpinner.Data
                 TemplatePadding: =4
                 TemplateSize: =Min(250, Self.Height - 60)
-                Width: =Parent.Width-60
-                WrapCount: =2
+                Width: =Parent.Width
+                WrapCount: =4
                 X: =40
                 Y: =SummaryForm_3.Height
                 ZIndex: =2
@@ -1345,5 +1381,6 @@ ViewDetailsScreen As screen:
                     RadiusTopLeft: =8
                     RadiusTopRight: =8
                     Width: =Parent.TemplateWidth/1.10
+                    X: =20
                     ZIndex: =1
 
