--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -324,7 +324,8 @@ DashboardScreen As screen:
                                 If(Parent.Width<358,12,Parent.Width<378,14,16)
                             Text: |-
                                 =//If(cumulatively=true, "Open" & Char(10)& "Leads#" & Char(10)& "30","Open" & Char(10)& "Leads#" & Char(10) &  "15")
-                                If(cumulatively=true, "Open Leads#" & Char(10)& "30","Open Leads#" & Char(10) &  "15")
+                                
+                                If(cumulatively=true,"Open Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted")),"Open Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted" && Year('Created On')=Year(Now())))) 
                             Width: =Parent.Width
                             X: =btnQuotedLeadsDS_1.X
                             Y: =(Parent.Height-Self.Height)/2
@@ -391,7 +392,7 @@ DashboardScreen As screen:
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: |-
-                                =If(cumulatively=true,"Submitted Leads#" & Char(10)& "40","Submitted Leads#" & Char(10)& "15")
+                                =If(cumulatively=true,"Sold Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Sold")),"Sold Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Sold" && Year('Created On')=Year(Now())))) 
                             Width: =btnSoldLeadsDS_1.Width
                             X: =btnSoldLeadsDS_1.X
                             Y: =(Parent.Height-Self.Height)/2
